fix spacing management

--- a/src/index.css
+++ b/src/index.css
@@ -46,8 +46,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button:not(:disabled):hover {
   border-color: #646cff;
+}
+button:disabled {
+  cursor: default;
 }
 button:focus,
 button:focus-visible {
